ansible_scripts/roles/install_apps/longhorn/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /longhorn(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
